hphp/hack/test/typecheck/fallthrough_not_last_line.php.exp
ERROR: File "fallthrough_not_last_line.php", line 4, characters 11-12:
This `switch` has a `case` that implicitly falls through and is not annotated with `// FALLTHROUGH` (NastCheck[3005])
  File "fallthrough_not_last_line.php", line 5, characters 10-10:
  This `case` implicitly falls through. Did you forget to add `break` or `return`?
ERROR: File "fallthrough_not_last_line.php", line 4, characters 3-93:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "fallthrough_not_last_line.php", line 4, characters 11-12:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
